# finance-prediction

./: README.md  pyproject.toml  requirements.txt
notebooks/: 1.0-download-data.ipynb
src/finance_prediction/: __init__.py  __main__.py
src/finance_prediction/pipelines/download_data/: nodes.py  pipeline.py
tests/: test_run.py
